# keystone-oidc-auth-plugin

./: .coveragerc  .gitreview  .stestr.conf  .travis.yml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
doc/source/admin/: index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
doc/source/user/: index.rst
etc/: keystone-oidc.conf.sample
etc/config-generator/: keystone-oidc-auth-plugin.conf
keystone_oidc_auth_plugin/: __init__.py  auth.py  configuration.py  opts.py
keystone_oidc_auth_plugin/tests/: test_keystone_oidc_auth_plugin.py
releasenotes/source/: conf.py  index.rst
