[metadata]
name = keystone-oidc-auth-plugin
summary = OpenID Connect Implementation for OpenStack Keystone.
description-file =
    README.md
description-content-type = text/markdown; charset=UTF-8

author = Spanish National Research Council
author-email = computing@ifca.unican.es
home-page = http://www.ifca.es/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    keystone_oidc_auth_plugin

[entry_points]
keystone.auth.openid =
    ifca = keystone_oidc_auth_plugin.auth:OpenIDConnect

oslo.config.opts =
    keystone_oidc_auth_plugin = keystone_oidc_auth_plugin.opts:list_opts

[compile_catalog]
directory = keystone_oidc_auth_plugin/locale
domain = keystone_oidc_auth_plugin

[update_catalog]
domain = keystone_oidc_auth_plugin
output_dir = keystone_oidc_auth_plugin/locale
input_file = keystone_oidc_auth_plugin/locale/keystone_oidc_auth_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = keystone_oidc_auth_plugin/locale/keystone_oidc_auth_plugin.pot
